*
* 2.1-RC1
*

- External tables in agent
- Script source for table DCIs
- Driver for IgniteNet devices
- Management console:
	- Node's zone name shown in alarm browser and object overview when zoning is enabled
- Fixed issues: NX-1222, NX-1239


*
* 2.1-M3
*

- Improved event correlation based on network topology
- Improved the usability of the Server Configuration, by adding descriptions and recognition for data types and possible values
- Alternative core configuration section can be set for nxagentd using -G command line option
- Implicit external subagent registartion using EXT:* sections in agent configuration file
- Unknown syslog sources can be automatically added as nodes
- Server startup scripts
- New method "setMapImage" in NXSL class "NetObj"
- New attribute "mapImage" in NXSL class "NetObj"
- New NXSL class "Container"
- New NXSL function AgentExecuteActionWithOutput
- Container autobind mode and script can be set from NXSL
- Fixed bug in NXSL string concatenation
- Events generated when interface expected state changed
- Situations functionality is replaced with persistent storage that is included in each execution environment
- Compression support in communication protocol
- Switch forwarding database show correct interfaces for Mikrotik devices
- Driver for Juniper Networks switches
- Driver for Extreme Networks switches
- Experimental MQTT support
- Experimental agent-to-server connections (agent tunnels)
- Experimental Grafana integration
- Management console:
	- Mutiple files can be scheduled for upload to agent at once
	- DCIs created from templates made visually distinguishable in data collection editor
	- "Inverted" flag ignored in event processing policy if event or object list is empty
	- Object tools can be filtered by custom attribute presence
	- Configurable list of external URLs for each object
	- Sound for outstanding alarm reminder can be configured