@@ -34,6 +34,7 @@ BEGIN TRANSACTION;
 #include "images.in"
 #include "country_codes.in"
 #include "currency_codes.in"
+#include "devdb.in"
 #endif
 
 // End transaction
